fix: [#80] :bug: Fix bottom sheet UI on small mobile

--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -16,7 +16,7 @@ html {
 .dark-bottom-sheet {
   background-color: var(--color-grey-800);
   color: var(--color-white);
-  min-width: 26em !important;
+  min-width: 23em !important;
 }
 
 .mat-spinner circle {
